# Gsoc_Pal_Robotics_Demo_Task

./: .gitignore  README.md
dummy_sensor_plugin/: CMakeLists.txt  package.xml
dummy_sensor_plugin/env-hooks/: dummy_sensor_plugin.sh.in
dummy_sensor_plugin/src/: dummy_sensor_plugin.cpp
mr_description/: CMakeLists.txt  package.xml
mr_description/launch/: check_urdf.launch.py  robot_state_publisher.launch.py
mr_description/urdf/robots/: robot_3d.urdf.xacro
mr_gazebo/: CMakeLists.txt  package.xml
mr_gazebo/launch/: spawn_robot.launch.py  world.launch.py
pmb2_description/: CMakeLists.txt  package.xml
pmb2_description/robots/: pmb2.urdf.xacro
pmb2_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro  base_sensors.urdf.xacro
pmb2_description/urdf/cameras_add_on/: cameras_add_on.urdf.xacro
pmb2_description/urdf/dock/: dock.urdf.xacro
pmb2_description/urdf/objects/: antenna.urdf.xacro  cover.urdf.xacro
pmb2_description/urdf/sensors/: bumper.gazebo.xacro  bumper.urdf.xacro  courier.urdf.xacro  elp_rgb.gazebo.xacro  elp_rgb.urdf.xacro  hokuyo_urg_04lx_ug01_laser.gazebo.xacro  hokuyo_urg_04lx_ug01_laser.urdf.xacro  imu.gazebo.xacro  imu.urdf.xacro  microphone.urdf.xacro  range.gazebo.xacro  range.urdf.xacro  sick_tim551_laser.gazebo.xacro  sick_tim551_laser.urdf.xacro  sick_tim561_laser.gazebo.xacro  sick_tim561_laser.urdf.xacro  sick_tim571_laser.gazebo.xacro  (+3 more)
warehouse_world/: CMakeLists.txt  package.xml
warehouse_world/env-hooks/: warehouse_world.dsv.in  warehouse_world.sh.in
warehouse_world/worlds/: small_warehouse.world  test.world.sdf  warehouse.world.sdf
(+3 files in other folders)
